# mc-proxy

./: .gitignore  Cargo.toml  README.md
src/: config.rs  connection.rs  main.rs  server.rs
src/backend/: manager.rs  state.rs
src/filter/: geoip.rs  handshake.rs  mod.rs
src/protocol/: varint.rs
