[package]
name = "mc-proxy"
version = "0.2.0"
edition = "2024"


[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
maxminddb = "0.26"
byteorder = "1.5"
